[fix] prevent popup overflow

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -269,21 +269,23 @@ code, kbd {
 }
 
 .popup-wrapper {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0, 0.6);
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     z-index: 10;
-    backdrop-filter: blur(10px);
     .popup {
-        max-height: 100%;
+        max-height: 90%;
         z-index: 14;
+        margin: 2em auto;
         overflow: auto;
-    }
-    .popup-content * {
-        margin: 1em 0;
+        .popup-content {
+            * {
+                margin: 1em 0;
+            }
+        }
     }
 }
 
